{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 2118,
  "lineage": "2164d2b5-8d9b-fbcd-2628-bf5db34e7a1f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-086cae3329a3f7d75",
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:instance/i-08129c7d2b172ddd2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "whs_ec2_role_iac",
            "id": "i-08129c7d2b172ddd2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "whs-iac-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-071e92c3e59c09c60",
            "private_dns": "ip-10-0-101-12.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.12",
            "public_dns": "ec2-3-38-211-43.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.211.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ef79e6dca44b9284",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06dec37a6faf17965",
            "tags": {
              "Environment": "dev",
              "Name": "deployByIac",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "deployByIac",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c26fbe9dff71cb4f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.whs_ec2_role_iac",
            "aws_iam_role.whs_ec2_role_iac",
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.owasp-zap",
      "mode": "data",
      "type": "aws_instance",
      "name": "zap_instance_id",
      "provider": "module.owasp-zap.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-05e02e6210658716f",
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:instance/i-0fcc093f384111939",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "zap-terraform-service-role",
            "id": "i-0fcc093f384111939",
            "instance_id": "i-0fcc093f384111939",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "key_name": "wasp-zap",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-09d1efb6a1ddac7e5",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-111-25.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.111.25",
            "public_dns": "ec2-43-202-185-242.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.185.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-040deaaa6f8f4a122",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6087af3542c9f42",
            "tags": {
              "Name": "ZapTestInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-053e78e9d0668dd7f"
            ]
          }
        }
      ]
    },
    {
      "module": "module.owasp-zap",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticip",
      "provider": "module.owasp-zap.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ae2d8c1cfdae317",
            "association_id": "eipassoc-0c2a4d7906685d97a",
            "domain": "vpc",
            "id": "eipalloc-01ae2d8c1cfdae317",
            "instance": "i-0fcc093f384111939",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-09d1efb6a1ddac7e5",
            "private_dns": "ip-10-0-111-25.ap-northeast-2.compute.internal",
            "private_ip": "10.0.111.25",
            "public_dns": "ec2-43-202-185-242.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.185.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.owasp-zap.aws_iam_instance_profile.zap_instance_profile",
            "module.owasp-zap.aws_iam_role.service_role",
            "module.owasp-zap.aws_instance.zap_instance",
            "module.owasp-zap.aws_security_group.zap_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.owasp-zap",
      "mode": "managed",
      "type": "aws_instance",
      "name": "zap_instance",
      "provider": "module.owasp-zap.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e02e6210658716f",
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:instance/i-0fcc093f384111939",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "zap-terraform-service-role",
            "id": "i-0fcc093f384111939",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "wasp-zap",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09d1efb6a1ddac7e5",
            "private_dns": "ip-10-0-111-25.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.111.25",
            "public_dns": "ec2-43-202-185-242.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.185.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-040deaaa6f8f4a122",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6087af3542c9f42",
            "tags": {
              "Name": "ZapTestInstance"
            },
            "tags_all": {
              "Name": "ZapTestInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-053e78e9d0668dd7f"
            ]
          },
          "dependencies": [
            "module.owasp-zap.aws_iam_instance_profile.zap_instance_profile",
            "module.owasp-zap.aws_iam_role.service_role",
            "module.owasp-zap.aws_security_group.zap_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.owasp-zap",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zap_sg",
      "provider": "module.owasp-zap.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:security-group/sg-053e78e9d0668dd7f",
            "description": "ZAP security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053e78e9d0668dd7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ZAP CLI",
                "from_port": 8090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tcp",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20240103153001786200000006",
            "name_prefix": "terraform-",
            "owner_id": "851077919242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zap_sg_group"
            },
            "tags_all": {
              "Name": "zap_sg_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-051f9def0d18ba34c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_eip",
      "name": "sonarqube_eip",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f92330b34c932060",
            "association_id": "eipassoc-049e864b0625ace47",
            "domain": "vpc",
            "id": "eipalloc-0f92330b34c932060",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-08e693bc9021d6991",
            "private_dns": "ip-10-0-8-170.ap-northeast-2.compute.internal",
            "private_ip": "10.0.8.170",
            "public_dns": "ec2-13-125-0-192.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.0.192",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sonarqube_igw",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:internet-gateway/igw-06eb93c752cd67c85",
            "id": "igw-06eb93c752cd67c85",
            "owner_id": "851077919242",
            "tags": {
              "Name": "sonarqube_igw"
            },
            "tags_all": {
              "Name": "sonarqube_igw"
            },
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "dependencies": [
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_lb",
      "name": "sonarqube_lb",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:loadbalancer/app/sonarqube-lb/6956485996af4232",
            "arn_suffix": "app/sonarqube-lb/6956485996af4232",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sonarqube-lb-1936597928.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:loadbalancer/app/sonarqube-lb/6956485996af4232",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sonarqube-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0803a00788298d67d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-008ce633310fcfdaf"
              },
              {
                "subnet_id": "subnet-04d39ddb62b15d39b"
              },
              {
                "subnet_id": "subnet-0bedc269224b8a072"
              }
            ],
            "subnets": [
              "subnet-008ce633310fcfdaf",
              "subnet-04d39ddb62b15d39b",
              "subnet-0bedc269224b8a072"
            ],
            "tags": {
              "Environment": "sonarqube"
            },
            "tags_all": {
              "Environment": "sonarqube"
            },
            "vpc_id": "vpc-0ea6bdcb1bed2e73e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.sonarQube.aws_security_group.sonarqube_lb",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2b",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2c",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sonarqube_listener",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:listener/app/sonarqube-lb/6956485996af4232/6ee0634fc0ac3cec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:targetgroup/sonarqube-tg/e8135ac38173350a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:listener/app/sonarqube-lb/6956485996af4232/6ee0634fc0ac3cec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:loadbalancer/app/sonarqube-lb/6956485996af4232",
            "mutual_authentication": [],
            "port": 9000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarQube.aws_lb.sonarqube_lb",
            "module.sonarQube.aws_lb_target_group.sonarqube",
            "module.sonarQube.aws_security_group.sonarqube_lb",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2b",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2c",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sonarqube",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:targetgroup/sonarqube-tg/e8135ac38173350a",
            "arn_suffix": "targetgroup/sonarqube-tg/e8135ac38173350a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:targetgroup/sonarqube-tg/e8135ac38173350a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sonarqube-tg",
            "port": 9000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "dependencies": [
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sonarqube_nat",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f92330b34c932060",
            "association_id": "eipassoc-049e864b0625ace47",
            "connectivity_type": "public",
            "id": "nat-0b9e136c8e8fedc42",
            "network_interface_id": "eni-08e693bc9021d6991",
            "private_ip": "10.0.8.170",
            "public_ip": "13.125.0.192",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bedc269224b8a072",
            "tags": {
              "Name": "sonarqube_nat"
            },
            "tags_all": {
              "Name": "sonarqube_nat"
            }
          },
          "dependencies": [
            "module.sonarQube.aws_eip.sonarqube_eip",
            "module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sonarqube_private_route_table_a",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-055208249307a8017",
            "id": "rtb-055208249307a8017",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b9e136c8e8fedc42",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sonarqube_private_route_table_a"
            },
            "tags_all": {
              "Name": "sonarqube_private_route_table_a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarQube.aws_eip.sonarqube_eip",
            "module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.sonarQube.aws_nat_gateway.sonarqube_nat",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sonarqube_private_route_table_b",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-0a489a44b5d33576f",
            "id": "rtb-0a489a44b5d33576f",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b9e136c8e8fedc42",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sonarqube_private_route_table_b"
            },
            "tags_all": {
              "Name": "sonarqube_private_route_table_b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarQube.aws_eip.sonarqube_eip",
            "module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.sonarQube.aws_nat_gateway.sonarqube_nat",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sonarqube_private_route_table_c",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-030498e5bb7ecec06",
            "id": "rtb-030498e5bb7ecec06",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b9e136c8e8fedc42",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sonarqube_private_route_table_c"
            },
            "tags_all": {
              "Name": "sonarqube_private_route_table_c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarQube.aws_eip.sonarqube_eip",
            "module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.sonarQube.aws_nat_gateway.sonarqube_nat",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sonarqube_route_table",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-0bcb2228268280feb",
            "id": "rtb-0bcb2228268280feb",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06eb93c752cd67c85",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sonarqube_route_table"
            },
            "tags_all": {
              "Name": "sonarqube_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009d322734e1ba7b1",
            "route_table_id": "rtb-0bcb2228268280feb",
            "subnet_id": "subnet-0bedc269224b8a072"
          },
          "dependencies": [
            "module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.sonarQube.aws_route_table.sonarqube_route_table",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0821be61d1b849235",
            "route_table_id": "rtb-055208249307a8017",
            "subnet_id": "subnet-082fca2e31d12054a"
          },
          "dependencies": [
            "module.sonarQube.aws_eip.sonarqube_eip",
            "module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.sonarQube.aws_nat_gateway.sonarqube_nat",
            "module.sonarQube.aws_route_table.sonarqube_private_route_table_a",
            "module.sonarQube.aws_subnet.sonarqube_private_subnet_2a",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0daa776face1bd4e4",
            "route_table_id": "rtb-0bcb2228268280feb",
            "subnet_id": "subnet-04d39ddb62b15d39b"
          },
          "dependencies": [
            "module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.sonarQube.aws_route_table.sonarqube_route_table",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2b",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b1",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e39963d29e4bd236",
            "route_table_id": "rtb-0a489a44b5d33576f",
            "subnet_id": "subnet-0e2ca8bd3bf95365b"
          },
          "dependencies": [
            "module.sonarQube.aws_eip.sonarqube_eip",
            "module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.sonarQube.aws_nat_gateway.sonarqube_nat",
            "module.sonarQube.aws_route_table.sonarqube_private_route_table_b",
            "module.sonarQube.aws_subnet.sonarqube_private_subnet_2b",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b4fc294e9d9a122",
            "route_table_id": "rtb-0bcb2228268280feb",
            "subnet_id": "subnet-008ce633310fcfdaf"
          },
          "dependencies": [
            "module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.sonarQube.aws_route_table.sonarqube_route_table",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2c",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c1",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06593bbcb38e73914",
            "route_table_id": "rtb-030498e5bb7ecec06",
            "subnet_id": "subnet-0bd12f60d8576a239"
          },
          "dependencies": [
            "module.sonarQube.aws_eip.sonarqube_eip",
            "module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.sonarQube.aws_nat_gateway.sonarqube_nat",
            "module.sonarQube.aws_route_table.sonarqube_private_route_table_c",
            "module.sonarQube.aws_subnet.sonarqube_private_subnet_2c",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_db",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:security-group/sg-05efabf2da584e22e",
            "description": "sonarqube db group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05efabf2da584e22e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "postgre sql",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f3d0728aefae274"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sonarqube_db",
            "name_prefix": "",
            "owner_id": "851077919242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube_db_group"
            },
            "tags_all": {
              "Name": "sonarqube_db_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarQube.aws_security_group.sonarqube_lb",
            "module.sonarQube.aws_security_group.sonarqube_sg",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_default",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:security-group/sg-0d4a80276ea154eab",
            "description": "sonarqube default group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4a80276ea154eab",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "default",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f3d0728aefae274"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "sonarqube_default",
            "name_prefix": "",
            "owner_id": "851077919242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube_default_group"
            },
            "tags_all": {
              "Name": "sonarqube_default_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarQube.aws_security_group.sonarqube_lb",
            "module.sonarQube.aws_security_group.sonarqube_sg",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_lb",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:security-group/sg-0803a00788298d67d",
            "description": "sonarqube loadbalancer group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0803a00788298d67d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " ",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "sonarqube_lb",
            "name_prefix": "",
            "owner_id": "851077919242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube_lb_group"
            },
            "tags_all": {
              "Name": "sonarqube_lb_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_sg",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:security-group/sg-09f3d0728aefae274",
            "description": "sonarqube security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "id": "sg-09f3d0728aefae274",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0803a00788298d67d"
                ],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "sonarqube_sg",
            "name_prefix": "",
            "owner_id": "851077919242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube_sg_group"
            },
            "tags_all": {
              "Name": "sonarqube_sg_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sonarQube.aws_security_group.sonarqube_lb",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonarqube_private_subnet_2a",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-082fca2e31d12054a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082fca2e31d12054a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarqube_private_subnet_2a"
            },
            "tags_all": {
              "Name": "sonarqube_private_subnet_2a"
            },
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "dependencies": [
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonarqube_private_subnet_2b",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-0e2ca8bd3bf95365b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2ca8bd3bf95365b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarqube_private_subnet_2b"
            },
            "tags_all": {
              "Name": "sonarqube_private_subnet_2b"
            },
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "dependencies": [
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonarqube_private_subnet_2c",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-0bd12f60d8576a239",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd12f60d8576a239",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarqube_private_subnet_2c"
            },
            "tags_all": {
              "Name": "sonarqube_private_subnet_2c"
            },
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "dependencies": [
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonarqube_public_subnet_2a",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-0bedc269224b8a072",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bedc269224b8a072",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarqube_public_subnet_2a"
            },
            "tags_all": {
              "Name": "sonarqube_public_subnet_2a"
            },
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "dependencies": [
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonarqube_public_subnet_2b",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-04d39ddb62b15d39b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d39ddb62b15d39b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarqube_public_subnet_2b"
            },
            "tags_all": {
              "Name": "sonarqube_public_subnet_2b"
            },
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "dependencies": [
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonarqube_public_subnet_2c",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-008ce633310fcfdaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008ce633310fcfdaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarqube_public_subnet_2c"
            },
            "tags_all": {
              "Name": "sonarqube_public_subnet_2c"
            },
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "dependencies": [
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sonarqube_vpc",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:vpc/vpc-0ea6bdcb1bed2e73e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0edbe6160407cc22d",
            "default_route_table_id": "rtb-0dcc622f7e1212116",
            "default_security_group_id": "sg-010bfae4ec3878cb9",
            "dhcp_options_id": "dopt-06b676052885e79d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ea6bdcb1bed2e73e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dcc622f7e1212116",
            "owner_id": "851077919242",
            "tags": {
              "Name": "sonarqube-vpc"
            },
            "tags_all": {
              "Name": "sonarqube-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.sonarQube",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:vpc-endpoint/vpce-0bc96ed38c7fb9d2f",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "3.5.184.0/21",
              "52.219.56.0/22"
            ],
            "id": "vpce-0bc96ed38c7fb9d2f",
            "owner_id": "851077919242",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-030498e5bb7ecec06",
              "rtb-055208249307a8017",
              "rtb-0a489a44b5d33576f"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ea6bdcb1bed2e73e"
          },
          "dependencies": [
            "module.sonarQube.aws_eip.sonarqube_eip",
            "module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.sonarQube.aws_nat_gateway.sonarqube_nat",
            "module.sonarQube.aws_route_table.sonarqube_private_route_table_a",
            "module.sonarQube.aws_route_table.sonarqube_private_route_table_b",
            "module.sonarQube.aws_route_table.sonarqube_private_route_table_c",
            "module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vote_service_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:security-group/sg-0c26fbe9dff71cb4f",
            "description": "Web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c26fbe9dff71cb4f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "whs-sg",
            "name_prefix": "",
            "owner_id": "851077919242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "whs-sg"
            },
            "tags_all": {
              "Name": "whs-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-051f9def0d18ba34c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vote_service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "all",
            "from_port": 0,
            "id": "sgrule-1605830494",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c26fbe9dff71cb4f",
            "security_group_rule_id": "sgr-0d4c349ea21f75566",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vote_service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "https",
            "from_port": 443,
            "id": "sgrule-556953170",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c26fbe9dff71cb4f",
            "security_group_rule_id": "sgr-03adbe6985a987bf2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http",
            "from_port": 80,
            "id": "sgrule-3276071062",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c26fbe9dff71cb4f",
            "security_group_rule_id": "sgr-0d8bf257c498baeae",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-1976483107",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c26fbe9dff71cb4f",
            "security_group_rule_id": "sgr-09956790d31d03e63",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http",
            "from_port": 8080,
            "id": "sgrule-1921784647",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c26fbe9dff71cb4f",
            "security_group_rule_id": "sgr-0a755148370b9bdec",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http",
            "from_port": 9090,
            "id": "sgrule-1949398698",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c26fbe9dff71cb4f",
            "security_group_rule_id": "sgr-0b8dda05f236b113d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vote_service_sg.aws_security_group.this",
            "module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:network-acl/acl-071c41ef4ca8d5d7d",
            "default_network_acl_id": "acl-071c41ef4ca8d5d7d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-071c41ef4ca8d5d7d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "851077919242",
            "subnet_ids": [
              "subnet-05107d1efeae642e8",
              "subnet-06dec37a6faf17965",
              "subnet-087fee5f404ffa5a0",
              "subnet-0d6087af3542c9f42"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-051f9def0d18ba34c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-0e469a0f1acc3e8fa",
            "default_route_table_id": "rtb-0e469a0f1acc3e8fa",
            "id": "rtb-0e469a0f1acc3e8fa",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-051f9def0d18ba34c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:security-group/sg-019f317a2bcc1dc7f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-019f317a2bcc1dc7f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "851077919242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-051f9def0d18ba34c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054772daee1a2739d",
            "association_id": "eipassoc-04617746b75fc8be5",
            "domain": "vpc",
            "id": "eipalloc-054772daee1a2739d",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0cd34d0455371075f",
            "private_dns": "ip-10-0-101-203.ap-northeast-2.compute.internal",
            "private_ip": "10.0.101.203",
            "public_dns": "ec2-43-203-62-191.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.62.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb8506884fccdb7c",
            "association_id": "eipassoc-0ad692c053547b8cc",
            "domain": "vpc",
            "id": "eipalloc-0eb8506884fccdb7c",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0942d4ff75e474b9e",
            "private_dns": "ip-10-0-111-79.ap-northeast-2.compute.internal",
            "private_ip": "10.0.111.79",
            "public_dns": "ec2-13-124-165-194.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.165.194",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2c",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:internet-gateway/igw-05a88f3082688de90",
            "id": "igw-05a88f3082688de90",
            "owner_id": "851077919242",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-051f9def0d18ba34c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054772daee1a2739d",
            "association_id": "eipassoc-04617746b75fc8be5",
            "connectivity_type": "public",
            "id": "nat-01683a21eac6e5e70",
            "network_interface_id": "eni-0cd34d0455371075f",
            "private_ip": "10.0.101.203",
            "public_ip": "43.203.62.191",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06dec37a6faf17965",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb8506884fccdb7c",
            "association_id": "eipassoc-0ad692c053547b8cc",
            "connectivity_type": "public",
            "id": "nat-02db6b4ca622adf32",
            "network_interface_id": "eni-0942d4ff75e474b9e",
            "private_ip": "10.0.111.79",
            "public_ip": "13.124.165.194",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d6087af3542c9f42",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0922368b421999f3d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01683a21eac6e5e70",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0922368b421999f3d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0278b7b1e9f05e87a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02db6b4ca622adf32",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0278b7b1e9f05e87a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05a88f3082688de90",
            "id": "r-rtb-09a43233b9e8eb5171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a43233b9e8eb517",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-0922368b421999f3d",
            "id": "rtb-0922368b421999f3d",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01683a21eac6e5e70",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-051f9def0d18ba34c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-0278b7b1e9f05e87a",
            "id": "rtb-0278b7b1e9f05e87a",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02db6b4ca622adf32",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-051f9def0d18ba34c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-09a43233b9e8eb517",
            "id": "rtb-09a43233b9e8eb517",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a88f3082688de90",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-051f9def0d18ba34c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce932bc2d22c569e",
            "route_table_id": "rtb-0922368b421999f3d",
            "subnet_id": "subnet-05107d1efeae642e8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09940742047654822",
            "route_table_id": "rtb-0278b7b1e9f05e87a",
            "subnet_id": "subnet-087fee5f404ffa5a0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acfcd196c5ffb917",
            "route_table_id": "rtb-09a43233b9e8eb517",
            "subnet_id": "subnet-06dec37a6faf17965"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe6d876feb8d24f1",
            "route_table_id": "rtb-09a43233b9e8eb517",
            "subnet_id": "subnet-0d6087af3542c9f42"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-05107d1efeae642e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05107d1efeae642e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-051f9def0d18ba34c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-087fee5f404ffa5a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087fee5f404ffa5a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-051f9def0d18ba34c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-06dec37a6faf17965",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dec37a6faf17965",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-public-ap-northeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-public-ap-northeast-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-051f9def0d18ba34c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-0d6087af3542c9f42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.111.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6087af3542c9f42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-public-ap-northeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-public-ap-northeast-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-051f9def0d18ba34c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:vpc/vpc-051f9def0d18ba34c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071c41ef4ca8d5d7d",
            "default_route_table_id": "rtb-0e469a0f1acc3e8fa",
            "default_security_group_id": "sg-019f317a2bcc1dc7f",
            "dhcp_options_id": "dopt-06b676052885e79d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-051f9def0d18ba34c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e469a0f1acc3e8fa",
            "owner_id": "851077919242",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}